# rust-api

./: .gitignore  Cargo.toml  devenv.nix
cli_app/: Cargo.toml
cli_app/src/: main.rs  model.rs  settings.rs
cli_app/src/api/: v1.rs
cli_app/src/api/handlers/: hello.rs  posts.rs  users.rs
cli_app/src/commands/: hello.rs  mod.rs  serve.rs
cli_app/src/services/: mod.rs  post.rs  user.rs
cli_app/src/services/in_memory_service/: post.rs  user.rs
cli_app/src/state/: mod.rs
hello_main/: Cargo.toml
hello_main/src/: main.rs
