[package]
name = "cli_app"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arc-swap = "1.8.2"
axum = "0.8.8"
chrono = { version = "0.4.43", features = ["serde"] }
clap = "4.5.60"
config = "0.15.19"
dotenv = "0.15.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["trace"] }
tracing = { version = "0.1.44", features = ["log"] }
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.22", features = ["registry", "env-filter"] }
