[package]
name = "hello_main"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.49.0", features = ["full"] }
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
anyhow = "1.0.101"
rand = "0.10.0"
tower-http = { version = "0.6.8", features = ["catch-panic"] }
thiserror = "2.0.18"
tracing = "0.1.44"
